gccida/g1/split_all_insns
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3224:4: error: expected ';' after expression
rtx v5; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3224:5: error: use of undeclared identifier 'v5'
rtx v5; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3242:1: error: use of undeclared identifier 'v5'
v5 = split_insn( i); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3243:6: error: use of undeclared identifier 'v5'
if ( v5 ) 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3245:20: error: use of undeclared identifier 'v5'
for ( ; *( _WORD *)v5 == 35; v5 = ( rtx)v5[1] ) 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3245:30: error: use of undeclared identifier 'v5'
for ( ; *( _WORD *)v5 == 35; v5 = ( rtx)v5[1] ) 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3245:41: error: expected ')'
for ( ; *( _WORD *)v5 == 35; v5 = ( rtx)v5[1] ) 
                                        ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3245:5: note: to match this '('
for ( ; *( _WORD *)v5 == 35; v5 = ( rtx)v5[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/recog.c:3248:5: error: use of undeclared identifier 'v5'
i = v5; 
    ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/split_all_insns/src/obj/recog.o] Error 1
